# SilentMath

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
Scripts/: GenerateSavegame.py
Shaders/: Compile.bat  Default.frag  Default.vert  Quad.vert  Shader.vert
Source/: Framework.cpp  Framework.h  Main.cpp  Types.h  Utils.h
Source/Engine/: Application.cpp  Application.h  Configuration.cpp  Configuration.h  Time.cpp  Time.h
Source/Engine/Assets/: Assets.cpp  Assets.h
Source/Engine/Assets/Parsers/: Tim.cpp  Tmd.cpp  Tmd.h
Source/Engine/Game/Hud/: Hud.cpp  Hud.h  Toast.cpp  Toast.h
Source/Engine/Input/: Action.cpp  Action.h  Binding.cpp  Binding.h  Bindings.cpp  Bindings.h  Event.cpp  Event.h  Events.cpp  Events.h  Input.cpp  Input.h  Keys.cpp  Keys.h  Text.cpp  Text.h
Source/Engine/Renderer/: Base.cpp  Base.h  Renderer.cpp  Renderer.h  View.cpp  View.h
Source/Engine/Renderer/Backends/OpenGl/: ElementArrayBuffer.cpp  ElementArrayBuffer.h  ElementBuffer.cpp  ElementBuffer.h  OpenGl.cpp  OpenGl.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  View.cpp  View.h
Source/Engine/Renderer/Backends/Vulkan/: Vulkan.cpp  Vulkan.h
Source/Engine/Renderer/Structures/: Line.h  Sprite.h  Triangle.h  Vertex.h
Source/Engine/Services/: Configuration.cpp  Configuration.h  Filesystem.cpp  Filesystem.h  Options.cpp  Options.h  Savegame.cpp  Savegame.h  Time.cpp  Time.h
Source/Engine/Services/Assets/: Assets.cpp  Assets.h
Source/Engine/Services/Assets/Parsers/: Plm.cpp  Plm.h  Tim.cpp  Tim.h  Tmd.cpp  Tmd.h
Source/Engine/Services/Savegame/: Savegame.cpp  Savegame.h
Source/Engine/Services/Savegame/Schemas/: Savegame.fbs  Stuff.fbs  Test.fbs  Test_generated.h  Things.fbs
Source/Math/: Constants.h  Math.h  Rng.cpp  Rng.h  Utils.cpp  Utils.h
Source/Math/Objects/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  AxisAngle.cpp  AxisAngle.h  BoundingCylinder.cpp  BoundingCylinder.h  BoundingSphere.cpp  BoundingSphere.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  Color.cpp  Color.h  EulerAngles.cpp  EulerAngles.h  Matrix.cpp  Matrix.h  OrientedBoundingBox.cpp  OrientedBoundingBox.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Vector2.cpp  Vector2.h  Vector2i.cpp  Vector2i.h  Vector3.cpp  Vector3.h  Vector3i.cpp  Vector3i.h  Vector4.cpp  Vector4.h
Source/Renderer/: Renderer.cpp  Renderer.h
Source/Utils/: BitField.cpp  BitField.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  Debug.cpp  Debug.h  Parallel.cpp  Parallel.h  Utils.cpp  Utils.h
Tools/: CompileShaders.bat  GenerateSavegame.py
Tools/FlatBuffers/: GenerateSavegame.py
